--- a/package.json
+++ b/package.json
@@ -1,37 +1,47 @@
 {
   "name": "gatsby-starter-netlify-cms",
-  "description": "Example Gatsby, and Netlify CMS project",
-  "version": "1.1.3",
-  "author": "Austin Green",
+  "description": "Couching web site for my lovely wife",
+  "version": "1.2.3",
+  "author": "Pavel Uvarov",
   "dependencies": {
-    "bulma": "^0.7.0",
-    "gatsby": "^2.13.31",
-    "gatsby-image": "^2.0.23",
-    "gatsby-plugin-netlify": "^2.0.6",
-    "gatsby-plugin-netlify-cms": "^4.1.6",
-    "gatsby-plugin-purgecss": "^4.0.0",
-    "gatsby-plugin-react-helmet": "^3.0.4",
-    "gatsby-plugin-sass": "^2.0.7",
-    "gatsby-plugin-sharp": "^2.2.9",
-    "gatsby-plugin-typescript": "^2.1.2",
-    "gatsby-remark-copy-linked-files": "^2.0.7",
-    "gatsby-remark-images": "^3.1.6",
-    "gatsby-remark-relative-images": "^0.2.1",
-    "gatsby-source-filesystem": "^2.0.26",
-    "gatsby-transformer-remark": "^2.6.9",
-    "gatsby-transformer-sharp": "^2.1.9",
-    "lodash": "^4.17.15",
-    "lodash-webpack-plugin": "^0.11.4",
-    "netlify-cms-app": "^2.9.6",
-    "netlify-cms-media-library-cloudinary": "^1.3.2",
-    "netlify-cms-media-library-uploadcare": "^0.5.2",
-    "node-sass": "^4.11.0",
-    "parcel-bundler": "^1.9.4",
-    "prop-types": "^15.6.0",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4",
-    "react-helmet": "^5.2.0",
-    "uuid": "^3.2.1"
+    "@glidejs/glide": "^3.4.1",
+    "@types/node": "13.7.0",
+    "@types/react": "16.9.19",
+    "@types/react-dom": "16.9.5",
+    "@types/react-helmet": "5.0.15",
+    "babel-plugin-styled-components": "^1.10.7",
+    "bulma": "0.8.0",
+    "gatsby": "2.19.12",
+    "gatsby-image": "2.2.40",
+    "gatsby-plugin-netlify": "2.1.32",
+    "gatsby-plugin-netlify-cms": "4.1.38",
+    "gatsby-plugin-purgecss": "4.0.1",
+    "gatsby-plugin-react-helmet": "3.1.22",
+    "gatsby-plugin-sass": "2.1.28",
+    "gatsby-plugin-sharp": "2.4.5",
+    "gatsby-plugin-styled-components": "^3.1.19",
+    "gatsby-plugin-typescript": "2.1.27",
+    "gatsby-remark-copy-linked-files": "2.1.37",
+    "gatsby-remark-images": "3.1.44",
+    "gatsby-remark-relative-images": "0.2.3",
+    "gatsby-source-filesystem": "2.1.48",
+    "gatsby-transformer-remark": "2.6.50",
+    "gatsby-transformer-sharp": "2.3.14",
+    "jump.js": "^1.0.2",
+    "lodash": "4.17.15",
+    "lodash-webpack-plugin": "0.11.5",
+    "netlify-cms-app": "2.11.14",
+    "netlify-cms-media-library-cloudinary": "1.3.4",
+    "netlify-cms-media-library-uploadcare": "0.5.5",
+    "node-sass": "4.13.1",
+    "parcel-bundler": "1.12.4",
+    "prop-types": "15.7.2",
+    "react": "16.12.0",
+    "react-dom": "16.12.0",
+    "react-helmet": "5.2.1",
+    "styled-components": "^5.0.1",
+    "typescript": "3.7.5",
+    "uuid": "3.4.0"
   },
   "keywords": [
     "gatsby"
@@ -40,21 +50,15 @@
   "main": "n/a",
   "scripts": {
     "clean": "gatsby clean",
-    "start:app": "npm run develop",
-    "start:lambda": "netlify-lambda serve src/lambda",
-    "start": "run-p start:**",
-    "build:app": "npm run clean && gatsby build",
-    "build:lambda": "netlify-lambda build src/lambda",
-    "build": "run-p build:**",
+    "start": "npm run develop",
+    "build": "npm run clean && gatsby build",
     "develop": "npm run clean && gatsby develop",
-    "serve": "gatsby serve",
+    "type-check": "tsc --noEmit",
+    "lint": "tslint --project .",
     "format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"{gatsby-*.js,src/**/*.js}\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "http-proxy-middleware": "^0.19.1",
-    "netlify-lambda": "^1.4.3",
-    "npm-run-all": "^4.1.5",
-    "prettier": "^1.15.3"
+    "prettier": "1.19.1"
   }
 }
