--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/react": "16.9.19",
     "@types/react-dom": "16.9.5",
     "@types/react-helmet": "5.0.15",
+    "@types/styled-components": "^4.4.2",
     "babel-plugin-styled-components": "^1.10.7",
     "bulma": "0.8.0",
     "gatsby": "2.19.12",
@@ -35,10 +36,12 @@
     "netlify-cms-media-library-uploadcare": "0.5.5",
     "node-sass": "4.13.1",
     "parcel-bundler": "1.12.4",
+    "polished": "^3.4.4",
     "prop-types": "15.7.2",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-helmet": "5.2.1",
+    "react-scroll-parallax": "^2.3.1",
     "styled-components": "^5.0.1",
     "typescript": "3.7.5",
     "uuid": "3.4.0"
@@ -52,7 +55,7 @@
     "clean": "gatsby clean",
     "start": "npm run develop",
     "build": "npm run clean && gatsby build",
-    "develop": "npm run clean && gatsby develop",
+    "develop": "npm run clean && gatsby develop -p 8001",
     "type-check": "tsc --noEmit",
     "lint": "tslint --project .",
     "format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"{gatsby-*.js,src/**/*.js}\"",
